backend_output.log

> backend@1.0.0 dev
> nodemon --exec ts-node src/server.ts

[33m[nodemon] 2.0.22[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/server.ts`[39m
C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/server.ts(9,10): error TS2614: Module '"./routes/authRoutes"' has no exported member 'authRoutes'. Did you mean to use 'import authRoutes from "./routes/authRoutes"' instead?
src/server.ts(10,10): error TS2305: Module '"./middleware/authMiddleware"' has no exported member 'authMiddleware'.
src/server.ts(155,38): error TS2339: Property 'verifyStreamToken' does not exist on type 'AuthService'.
src/server.ts(157,29): error TS2339: Property 'getSession' does not exist on type 'NodeMediaServer'.
src/server.ts(164,27): error TS2339: Property 'getSession' does not exist on type 'NodeMediaServer'.
src/server.ts(171,25): error TS2339: Property 'getSession' does not exist on type 'NodeMediaServer'.
src/server.ts(188,8): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '"prePlay"' is not assignable to parameter of type '"donePublish"'.
src/server.ts(196,38): error TS2339: Property 'verifyStreamToken' does not exist on type 'AuthService'.
src/server.ts(198,29): error TS2339: Property 'getSession' does not exist on type 'NodeMediaServer'.
src/server.ts(205,27): error TS2339: Property 'getSession' does not exist on type 'NodeMediaServer'.

    at createTSError (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Sam\Documents\GitHub\live-video-player\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [
    2614, 2305, 2339,
    2339, 2339, 2339,
    2769, 2339, 2339,
    2339
  ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
